--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "nlw",
   "scripts": {
-    "start": "nodemon src/server.js"
+    "start": "nodemon src/server.js",
+    "db": "node src/database/db.js"
   },
   "dependencies": {
+    "eslint": "^7.2.0",
     "express": "^4.17.1",
     "nunjucks": "^3.2.1",
     "sqlite3": "^4.2.0"
